# jira-server-data

./: .env.sample  README.md  app.py  pyproject.toml  requirements.txt
resources/: issue.json  project.json  webhook.json
