[tool.poetry]
name = "jira-workspace-data"
version = "0.1.0"
description = "A set of resources for ingesting Jira On Premise data into Port"
authors = ["hpal <ahosea15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
requests = "^2.31.0"
python-decouple = "^3.8"
httpx = "^0.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
